# GoGo-RPIM

./: CMakeLists.txt  README.md
domains/: domains.cc  domains.h  supportdomain.cc  supportdomain.h
gui/: genDom.cpp  genDom.h  genVideo.cpp  genVideo.h  gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maxwellT.cpp  runSimulation.cpp  runSimulation.h  saveResVideo.cpp  saveResVideo.h  savevideoform.cpp  savevideoform.h  savevideoform.ui
lane/: lane.cc  lane.h
math/: matrix.cc  matrix.h  point.cc  point.h
maxwell/: genDom.cc  maxwell.cc  maxwell.h  maxwellTEZ.cc  maxwellTMZ.cc  maxwellgendom.cc  maxwellgendom.h  tez.cc  tez.h  tmz.cc  tmz.h
octave/: cP.m  cR.m  distE.m  irpim.m  lsfcm.m  lsfcm2.m  rpim.m  test_rpim_1.m  test_rpim_2.m
rpim/: rpim.cc  rpim.h
tests/: dft.cpp  rundft.sh  test_beta.cc  test_matrix_1.cc  test_matrix_1.h  test_maxwell_1.cc  test_maxwell_2.cc  test_maxwell_3.cc  test_maxwell_4.cc  test_maxwell_5.cc  test_maxwell_6.cc  test_rpim_1.cc  test_rpim_1.h  test_rpim_2.cc  test_rpim_2.h  test_rpim_3.cc  test_rpim_3.h  test_rpim_4.cc  test_rpim_5.cc  tradutor1.cc
